<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".Reservacion">

    <TextView
        android:id="@+id/textView11"
        android:layout_width="match_parent"
        android:layout_height="51dp"
        android:text="@string/Reser"
        android:textAlignment="center"
        android:textColor="@color/colorAccent"
        android:textSize="25sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/Text_NomR"
        android:layout_width="match_parent"
        android:layout_height="51dp"
        android:textAlignment="center"
        android:textSize="20sp" />

    <TextView
        android:id="@+id/Text_EmailR"
        android:layout_width="match_parent"
        android:layout_height="51dp"
        android:textAlignment="center"
        android:textSize="20sp" />

    <TextView
        android:id="@+id/Text_TeleR"
        android:layout_width="match_parent"
        android:layout_height="51dp"
        android:textAlignment="center"
        android:textSize="20sp" />

    <TextView
        android:id="@+id/Text_DiaR"
        android:layout_width="match_parent"
        android:layout_height="51dp"
        android:textAlignment="center"
        android:textSize="20sp" />

    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <Button
            android:id="@+id/button4"
            android:layout_width="171dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginBottom="8dp"
            android:background="@color/colorAccent"
            android:onClick="Menu"
            android:text="@string/Men"
            android:textColor="@android:color/background_light"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.317" />

        <Button
            android:id="@+id/button5"
            android:layout_width="171dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginBottom="8dp"
            android:background="@color/colorAccent"
            android:onClick="CerrarSe"
            android:text="@string/Cerrar"
            android:textColor="@android:color/background_light"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.502"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.687" />
    </android.support.constraint.ConstraintLayout>

</LinearLayout>